--- a/grid.html
+++ b/grid.html
@@ -28,7 +28,7 @@
             <span></span>
           </div>
           <div class="brand">
-            <h1>NOT NULL</h1>
+            <h1>Hasim Resto</h1>
           </div>
           <ul class="menu-list">
             <li><a href="">Home</a></li>
