--- a/grid.html
+++ b/grid.html
@@ -41,22 +41,22 @@
           <div class="service">
             <div class="icon">☕</div>
             <h3>Coffee</h3>
-            <p>hdidbd disbs dis shs sus si dis sjs sis sksnwbsjs.</p>
+            <p>Kopi merupakan sejenis minuman yang berasal dari proses pengolahan biji tanaman kopi.</p>
           </div>
           <div class="service">
             <div class="icon">🚬</div>
             <h3>Smoking</h3>
-            <p>hdidbd disbs dis shs sus si dis sjs sis sksnwbsjs.</p>
+            <p>Merokok adalah membakar tembakau yang kemudian dihisap asapnya, baik menggunakan rokok maupun menggunakan pipa.</p>
           </div>
           <div class="service">
             <div class="icon">🍜</div>
             <h3>Mie</h3>
-            <p>hdidbd disbs dis shs sus si dis sjs sis sksnwbsjs.</p>
+            <p>memasukkan makanan pokok ke dalam mulut serta mengunyah dan menelannya.</p>
           </div>
           <div class="service">
             <div class="icon">🥱</div>
             <h3>Sleep</h3>
-            <p>hdidbd disbs dis shs sus si dis sjs sis sksnwbsjs.</p>
+            <p>Tidur adalah salah satu istirahat terbaik bagi tubuh yang dapat mengembalikan energi</p>
           </div>
         </selection>
         <section class="Gallery">
