--- a/grid.html
+++ b/grid.html
@@ -73,7 +73,7 @@
       </div>
       <script>
         const menuToggle = document.querySelector('.menu-toggle');
-        const nav = nav = document.querySelector('nav ul');
+        const nav = document.querySelector('nav ul');
         
         menuToggle.addEventListener('click', function () {
           nav.classList.toggle('slide')
